<resources>
    <string name="app_name">Destiny BD</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="game">Sobre o jogo</string>
    <string name="guardian">Equipamentos</string>
    <string name="mission">Jornadas</string>
    <string name="events">Eventos</string>
    <string name="title_activity_items_menu">Equipamentos</string>
    <string name="primaryWeapons">Armas Principais</string>
    <string name="specialWeapons">Armas Especiais</string>
    <string name="heavyWeapons">Armas Pesadas</string>
    <string name="warlock_armor">Armaduras de Arcano</string>
    <string name="hunter_armor">Armaduras de Caçador</string>
    <string name="titan_armor">Armaduras de Titã</string>
    <string name="helmet">Capacete</string>
    <string name="arms">Manopla</string>
    <string name="chest">Armadura de torso</string>
    <string name="legs">Armadura de pernas</string>
    <string name="history">História</string>
    <string name="aboutGame">\tDestiny é um jogo online de tiro em primeira pessoa. Foi produzido pela Bungie e publicado pela Activision como parte de um acordo de publicação de dez anos entre as duas empresas. Destiny foi lançado em 9 de Setembro de 2014 para PlayStation 3, PlayStation 4, Xbox 360 e Xbox One. Em maio de 2015 a Bungie informou que Destiny atingiu a marca de 20 milhões jogadores.</string>
    <string name="historyGame">\tTudo mudou com a chegada do Viajante. Há muito tempo, ele trouxe nova vida ao nosso sistema solar. Chuvas lavaram Marte. Ar fresco limpou os céus de Vênus. E, logo depois, a humanidade correu para a escuridão do espaço e colonizou esses velhos mundos renovados. Foi uma época milagrosa, uma grande Era Dourada.\n\tPorém, ela não durou muito tempo. O Viajante tinha um inimigo antigo, uma escuridão poderosa, que nos encontrou aqui na Terra, e quase nos destruiu. Ninguém sabe exatamente o que foi que aconteceu naqueles momentos finais, mas sabemos que sobrevivemos e que devemos as nossas vidas ao Viajante.\n\tNos nossos dias mais sombrios, Humanos, Exos e Despertos encontraram o Viajante no local onde ele nos defendeu pela última vez, acima da Terra, silencioso e imóvel. Construímos a Cidade – a nossa última – dentro do seu véu protetor, lutando incontáveis guerras para manter a paz. Foi nessa era sombria que os Guardiões nasceram.\n\tAgora, uma nova era começou, e a única esperança para o nosso futuro jaz em desvendar o maior mistério do nosso passado. Você é um dos Guardiões da última cidade segura da Terra, capaz de usar um pouco do grande poder do Viajante. Você assume essa responsabilidade com o nascer de um novo dia. Titãs, Caçadores, e Arcanos finalmente retornaram aos nossos mundos há muito perdidos e descobriram que não estamos sós.\n\tDefenda a última Cidade segura da Terra. Derrote os nossos inimigos. Explore as ruínas antigas do nosso sistema solar. Descubra tudo que perdemos.\n\tTorne-se a lenda.</string>

</resources>
