<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/wallpaper"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainMenu">

    <Button
        android:id="@+id/ButtonGame"
        android:text="@string/game"
        android:layout_width="wrap_content"
        android:layout_height="175dp"
        android:background="@drawable/destiny_traveler"
        android:gravity="bottom"
        android:textColor="@android:color/white"
        android:layout_margin="2dp"/>

    <Button
        android:id="@+id/ButtonGuardian"
        android:text="@string/guardian"
        android:layout_width="160dp"
        android:layout_height="200dp"
        android:background="@drawable/guardiao1"
        android:gravity="bottom"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ButtonGame"
        android:layout_margin="2dp"/>

    <Button
        android:id="@+id/ButtonMission"
        android:text="@string/mission"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:background="@drawable/mission1"
        android:gravity="bottom"
        android:textColor="@android:color/white"
        android:layout_below="@+id/ButtonGame"
        android:layout_toEndOf="@+id/ButtonGuardian"
        android:layout_margin="2dp"/>

    <Button
        android:id="@+id/ButtonEvent"
        android:text="@string/events"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:background="@drawable/vogmenu"
        android:gravity="bottom"
        android:textColor="@android:color/white"
        android:layout_below="@+id/ButtonMission"
        android:layout_toEndOf="@+id/ButtonGuardian"
        android:layout_margin="2dp"/>


</RelativeLayout>
