<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/wallpaper"
    tools:context="com.example.gustavo.destinybd.TitanArmorMenu">

    <Button
        android:id="@+id/TitanHelmetButton"
        android:text="@string/helmet"
        android:background="@drawable/titan_hemelt"
        android:gravity="bottom"
        android:textColor="@android:color/white"
        android:shadowColor="@android:color/background_dark"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="12"
        android:layout_width="160dp"
        android:layout_height="155dp"
        android:layout_margin="2dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:onClick="openTitanHemeltIndex"/>

    <Button
        android:id="@+id/TitanArmsButton"
        android:text="@string/arms"
        android:layout_width="160dp"
        android:layout_height="155dp"
        android:background="@drawable/titan_arms"
        android:gravity="bottom"
        android:textColor="@android:color/white"
        android:shadowColor="@android:color/background_dark"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="12"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_alignTop="@+id/TitanHelmetButton"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/TitanChestButton"
        android:text="@string/chest"
        android:layout_width="160dp"
        android:layout_height="155dp"
        android:background="@drawable/titan_chest"
        android:gravity="bottom"
        android:textColor="@android:color/white"
        android:shadowColor="@android:color/background_dark"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="12"
        android:layout_below="@+id/TitanHelmetButton"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:onClick="openTitanChestIndex"/>

    <Button
        android:id="@+id/TitanLegsButton"
        android:text="@string/legs"
        android:layout_width="160dp"
        android:layout_height="155dp"
        android:background="@drawable/titan_legs"
        android:gravity="bottom"
        android:textColor="@android:color/white"
        android:shadowColor="@android:color/background_dark"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="12"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_alignTop="@+id/TitanChestButton"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
