<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/wallpaper"
    tools:context="com.example.gustavo.destinybd.HunterArmorMenu">

    <Button
        android:id="@+id/HunterHelmetButton"
        android:text="@string/helmet"
        android:background="@drawable/hunter_hemelt"
        android:gravity="bottom"
        android:textColor="@android:color/white"
        android:shadowColor="@android:color/background_dark"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="12"
        android:layout_width="160dp"
        android:layout_height="155dp"
        android:layout_margin="2dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:onClick="openHunterHemeltIndex"/>

    <Button
        android:id="@+id/HunterArmsButton"
        android:text="@string/arms"
        android:layout_width="160dp"
        android:layout_height="155dp"
        android:background="@drawable/hunter_arms"
        android:gravity="bottom"
        android:textColor="@android:color/white"
        android:shadowColor="@android:color/background_dark"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="12"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_alignTop="@+id/HunterHelmetButton"
        android:layout_alignParentEnd="true"
        android:onClick="openHunterArmsIndex"/>

    <Button
        android:id="@+id/HunterChestButton"
        android:text="@string/chest"
        android:layout_width="160dp"
        android:layout_height="155dp"
        android:background="@drawable/hunter_chest"
        android:gravity="bottom"
        android:textColor="@android:color/white"
        android:shadowColor="@android:color/background_dark"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="12"
        android:layout_below="@+id/HunterHelmetButton"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:onClick="openHunterChestIndex"/>

    <Button
        android:id="@+id/HunterLegsButton"
        android:text="@string/legs"
        android:layout_width="160dp"
        android:layout_height="155dp"
        android:background="@drawable/hunter_legs"
        android:gravity="bottom"
        android:textColor="@android:color/white"
        android:shadowColor="@android:color/background_dark"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="12"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_alignTop="@+id/HunterChestButton"
        android:layout_alignParentEnd="true"
        android:onClick="openHunterLegsIndex"/>

</RelativeLayout>
