<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/wallpaper"
    tools:context="com.example.gustavo.destinybd.ItemsMenu">

    <Button
        android:id="@+id/ButtonPrimaryWeapons"
        android:text="@string/primaryWeapons"
        android:layout_width="175dp"
        android:layout_height="155dp"
        android:layout_margin="2dp"
        android:background="@drawable/primary_weapons"
        android:gravity="bottom"
        android:textColor="@android:color/white"
        android:shadowColor="@android:color/background_dark"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="12" />

    <Button
        android:id="@+id/ButtonSpecialWeapons"
        android:text="@string/specialWeapons"
        android:layout_width="175dp"
        android:layout_height="155dp"
        android:layout_below="@+id/ButtonPrimaryWeapons"
        android:layout_alignParentStart="true"
        android:layout_margin="2dp"
        android:background="@drawable/special_weapons"
        android:gravity="bottom"
        android:textColor="@android:color/white"
        android:shadowColor="@android:color/background_dark"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="12" />

    <Button
        android:id="@+id/ButtonHeavyWeapons"
        android:text="@string/heavyWeapons"
        android:layout_width="175dp"
        android:layout_height="155dp"
        android:layout_below="@+id/ButtonSpecialWeapons"
        android:layout_alignParentStart="true"
        android:layout_margin="2dp"
        android:background="@drawable/heavy_weapons"
        android:gravity="bottom"
        android:textColor="@android:color/white"
        android:shadowColor="@android:color/background_dark"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="12" />


</RelativeLayout>
